--- a/views/trademark-order/add-service.ejs
+++ b/views/trademark-order/add-service.ejs
@@ -24,21 +24,14 @@
 
                   <div class="cc-form">
                     
-                    <form class="cc-form-self" action="/add-service-code-secret-132321-submit" method="post">
+                    <form class="cc-form-self" id="add-service" action="/add-service-code-secret-132321-submit" method="post">
                       
                       <div class="row">
                         <div class="col-12">
 
                           <div class="form-group">
 
-                            <label for="NcEmail">Customer Information:</label>
-                            <div class="row">
-                              <div class="col-6">
-                                <div class="form-field-inner" >
-                                  
-                                </div>
-                              </div>
-                            </div>
+                           
 
                             <div class="form-field mt-2">
                               <span >Service Name</span>
@@ -52,7 +45,7 @@
 
                             <div class="form-field mt-2">
                               <span >Price</span>
-                              <input type="text" name="amount" id="amount" placeholder="Amount" class="form-control" required="required">
+                              <input type="number" min="1" name="amount" id="amount" placeholder="Amount" class="form-control" required="required">
                             </div>
 
                         
