--- a/views/customer/orders.ejs
+++ b/views/customer/orders.ejs
@@ -86,7 +86,7 @@
                                         <td><%= trademark.markMongo.serialNumber %></td>
                                         <td><%= trademark.markMongo.registrationNumber %></td>
                                         <td><a href="/customer/orders/<%= trademark.markMongo._id %>"><%= trademark.markMongo.mark %></a></td>
-                                        <td><%= trademark.markMongo.office_status %></td>
+                                        <td><%= trademark.markMongo.status %></td>
                                         <td><a href="#" class="text-danger"></a></td>
                                       </tr>
                                       <% } %>
@@ -116,15 +116,16 @@
                                 </thead>
                                 <tbody>
                                   <% mark.data.forEach(function(trademark,key) { %>
-                                    
+                                    <% if( trademark.markMongo ) { %>
                                     <tr>
-                                      <td><%= trademark.mark.filing_date %></td>
-                                      <td><%= trademark.mark.filing_number %></td>
-                                      <td><%= trademark.mark.registration_number %></td>
-                                      <td><a href="/customer/orders/5"><%= trademark.mark.name %></a></td>
-                                      <td><%= trademark.mark.office_status %></td>
+                                      <td><%= moment(trademark.markMongo.filingDate).format('MMM D, YYYY') %></td>
+                                      <td><%= trademark.markMongo.serialNumber %></td>
+                                      <td><%= trademark.markMongo.registrationNumber %></td>
+                                      <td><a href="/customer/orders/<%= trademark.markMongo._id %>"><%= trademark.markMongo.mark %></a></td>
+                                      <td><%= trademark.markMongo.status %></td>
                                       <td><a href="#" class="text-danger"></a></td>
                                     </tr>
+                                    <% } %>
                                   <% }) %>
                                 </tbody>
                               </table>
