--- a/views/public/opposition-proof-of-use.ejs
+++ b/views/public/opposition-proof-of-use.ejs
@@ -1,6 +1,6 @@
 <div class="container">
 	<div class="row justify-content-center box-bg-container">
-		<div class="col-md-12" style="padding:5% 0;text-align: justify;">
+		<div class="col-md-12" style="padding:30px 0;text-align: justify;">
 		
 			<h1 style="margin: 0px 0px 10px;">Opposed by a third party trademark? Not so fast ...</h1>
             
