--- a/views/customer/orderDetails.ejs
+++ b/views/customer/orderDetails.ejs
@@ -6,15 +6,41 @@
           <div class="col-12">
               <div class="ar-wrap qa-stp">
                 <div class="ar-box stp-row">
-                  <div class="ar-box-head"><h1 class="ar-title">Active Orders</h1></div>
+                  <div class="ar-box-head"><h1 class="ar-title"><%= trademark.mark %></h1></div>
                   <div class="ar-cinfo">
-                    <div class="ar-cname ar-info-line">Customer Name: <span class="ar-value">Seven Eight Six</span></div>
-                    <div class="ar-cno ar-info-line">Customer Number: <span class="ar-value">1786</span></div>
+                    <div class="ar-cname ar-info-line">Status: <span class="ar-value"><%= trademark.status %></span></div>
+                    <div class="ar-cname ar-info-line">Status Date: <span class="ar-value"><%= trademark.statusDateFormatted %></span></div>
+                    <div class="ar-cname ar-info-line">Status Description: <span class="ar-value"><%= trademark.statusDescription %></span></div>
+
                   </div>
                 </div>
                 <div class="ard-wrap stp-row">
+                  <% if( trademark.serialNumber ) { %>
+                    <div class="ar-cname ar-info-line">Serial Number: <span class="ar-value"><%= trademark.serialNumber %></span></div>
+                  <% } %>
+
+                  <% if( trademark.registrationNumber ) { %>
+                    <div class="ar-cname ar-info-line">Registration Number: <span class="ar-value"><%= trademark.registrationNumber %></span></div>
+                  <% } %>
+
+                  <% if( trademark.registrationDate ) { %>
+                    <div class="ar-cname ar-info-line">Registration Date: <span class="ar-value"><%= trademark.registrationDate %></span></div>
+                  <% } %>
+
+                  <% if( trademark.publicationDate ) { %>
+                    <div class="ar-cname ar-info-line">Publication Date: <span class="ar-value"><%= trademark.publicationDate %></span></div>
+                  <% } %>
+
+                  <% if( trademark.documents.length > 0 ) { %>
+                    <div class="ar-cname ar-info-line">Documents: </div>
+                    <ul>
+                    <% trademark.documents.forEach(function(document,key) { %>
+                      <li><a href="<%= document.link %>" target="_blank"><%= document.label %></a></li>
+                    <% }) %>
+                    </ul>
+                  <% } %>
+
                   
-                  details here
                 </div>
               </div>
           </div>
