--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -16,14 +16,14 @@
 
 					<!-- SEARCH BOX -->
 					<div id="search">
-						<form method="POST" action="/search/case">
+						<form method="POST" action="/search/serial-number">
 						
 							<div class="input-group search-block">
 
 								<button type="submit">
 									<i class="fa fa-search"></i>
 								</button>
-								<input type="text" class="form-control" name="case_number" placeholder="Search For Case #" required>
+								<input type="text" class="form-control" name="case_number" placeholder="Search Serial Number" required>
 
 							</div>
 						</form>
