--- a/views/public/search.ejs
+++ b/views/public/search.ejs
@@ -4,15 +4,15 @@
 		
 			<h1 style="margin: 0px 0px 10px;">Search</h1>
             
-      <div id="search">
+      <div id="search" style="min-height:65vh">
         <form method="POST" action="/search/serial-number">
         
           <div class="input-group search-block">
 
-            <button type="submit">
+            <!-- <button type="submit">
               <i class="fa fa-search"></i>
-            </button>
-            <input type="text" class="form-control" name="case_number" placeholder="Search For Case #" required>
+            </button> -->
+            <input type="text" class="form-control" name="case_number" placeholder="Search Serial Number" required>
 
           </div>
         </form>
