--- a/views/layouts/public-layout-interactive.ejs
+++ b/views/layouts/public-layout-interactive.ejs
@@ -88,9 +88,9 @@ $( document ).ready(function() {
       contentType: "application/json",
       success: function( result ) {
 
-        if ( (response * 1) < 3) { alert(1);
+        if ( (response * 1) < 3) { 
           $(location).attr('href', '/'+ number +'/pay')
-        } else { alert('2');
+        } else { 
           $(location).attr('href', '/')
         }
         
