--- a/views/layouts/public-layout-interactive.ejs
+++ b/views/layouts/public-layout-interactive.ejs
@@ -16,7 +16,7 @@
   <meta property="og:type" content="article" />
 
   <!-- Webpage Title -->
-  <title><%= siteTitle %> | TradeMarkers | Intractive Domain Agent</title>
+  <title><%= title %> | TradeMarkers | Intractive Domain Agent</title>
   
   <!-- Styles -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
