udpate admin notification

--- a/email-templates/adminNotificationCustomerEmailUpdate.ejs
+++ b/email-templates/adminNotificationCustomerEmailUpdate.ejs
@@ -347,6 +347,11 @@
                           <table class="table">
 
                             <tr>
+                              <th>Name: </th>
+                              <td><%= user.suffix %> <%= user.firstName %> <%= user.lastName %></td>
+                            </tr>
+
+                            <tr>
                               <th>Email recepient: </th>
                               <td><%= user.secondaryEmail %></td>
                             </tr>
