--- a/email-templates/adminNotificationCustomerEmailUpdate.ejs
+++ b/email-templates/adminNotificationCustomerEmailUpdate.ejs
@@ -352,7 +352,12 @@
                             </tr>
 
                             <tr>
-                              <th>Email recepient: </th>
+                              <th>System Registered Email: </th>
+                              <td><%= user.email %></td>
+                            </tr>
+
+                            <tr>
+                              <th>Email recepient (new): </th>
                               <td><%= user.secondaryEmail %></td>
                             </tr>
 
