--- a/email-templates/adminNotificationCustomerEmailUpdate.ejs
+++ b/email-templates/adminNotificationCustomerEmailUpdate.ejs
@@ -338,17 +338,14 @@
                         </tr> 
                         <tr style="border-collapse:collapse;"> 
                          <td align="left" style="padding:0;Margin:0;padding-top:20px;" mc:edit="block_6">
-                          <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-size:16px;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:21px;color:#333333;">
-                         
                           
-
                           Customer updated Details
 
-                          <table class="table">
+                          <table class="table" style="width: 100%;text-align: left;padding-top: 10px;">
 
                             <tr>
-                              <th>Name: </th>
-                              <td><%= user.suffix %> <%= user.firstName %> <%= user.lastName %></td>
+                              <th style="width:30%">Name: </th>
+                              <td style="width:70%"><%= user.suffix %> <%= user.firstName %> <%= user.lastName %></td>
                             </tr>
 
                             <tr>
@@ -357,13 +354,13 @@
                             </tr>
 
                             <tr>
-                              <th>Email recepient (new): </th>
+                              <th>New Email Update: </th>
                               <td><%= user.secondaryEmail %></td>
                             </tr>
 
                           </table>
                           
-                         </p></td> 
+                         </td> 
                         
                         </tr> 
                        
