--- a/views/customer/updateDetailForm.ejs
+++ b/views/customer/updateDetailForm.ejs
@@ -44,9 +44,9 @@
                                         <div class="col-2">
                                             <div class="form-field-inner" >
                                                 <select class="form-control" name="suffix" >
-                                                    <option value="Mr" <%= user.suffix == "Mr." ? "selected":"" %>>Mr</option>
-                                                    <option value="Ms" <%= user.suffix == "Ms." ? "selected":"" %>>Ms</option>
-                                                    <option value="Mrs" <%= user.suffix == "Mrs." ? "selected":"" %>>Mrs</option>
+                                                    <option value="Mr." <%= user.suffix == "Mr." ? "selected":"" %>>Mr</option>
+                                                    <option value="Ms." <%= user.suffix == "Ms." ? "selected":"" %>>Ms</option>
+                                                    <option value="Mrs." <%= user.suffix == "Mrs." ? "selected":"" %>>Mrs</option>
                                                 </select>
                                             </div>
                                         </div>
